--- a/pCompany/src/com/pocan/pcompany/component/Menu.form
+++ b/pCompany/src/com/pocan/pcompany/component/Menu.form
@@ -82,7 +82,7 @@
         <Container class="com.pocan.pcompany.swing.RoundPanel" name="home_button">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="33" red="33" type="rgb"/>
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
