--- a/pCompany/src/com/pocan/pcompany/main/LoginFrame.form
+++ b/pCompany/src/com/pocan/pcompany/main/LoginFrame.form
@@ -340,6 +340,9 @@
               <Image iconType="3" name="/com/pocan/pcompany/icon/orange_circle_25x25.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="orange_circle_labelMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="red_circle_label">
           <Properties>
